# renikud-v3

./: .gitignore  AGENTS.md  README.md  main.py  opencode.json  pyproject.toml
bert-nikud/: .gitignore  ABSTRACT.md  ARCHITECTURE.md  README.md  pyproject.toml
bert-nikud/renikud-onnx/: README.md  export.py  pyproject.toml
bert-nikud/renikud-onnx/examples/: usage.py
bert-nikud/renikud-onnx/src/renikud_onnx/: __init__.py  constants.py  decode.py  model.py  predict.py
bert-nikud/scripts/: eval.py
bert-nikud/src/: config.py  constants.py  dataset.py  decode.py  deduplicate.py  encode.py  evaluate.py  infer.py  inference.py  model.py  normalize.py  prepare_data.py  prepare_tokenizer.py  pretokenize.py  tokenizer_utils.py  train.py  trainer.py
bert-nikud/tokenizer/char_tokenizer/: tokenizer.json  tokenizer_config.json
bert-nikud/tokenizer/dictabert-large-char-menaked/: tokenizer.json  tokenizer_config.json
bert-nikud/web/: index.html  script.js  styles.css
plans/: README.md
plans/bert-nikud-menaked-verification/: 001_verify_tokenization.py  002_verify_alignment.py  003_verify_training_minutes.py  README.md
plans/bert-nikud-onnx-verification/: 001_export_onnx.py  002_infer_onnx.py  README.md
plans/bert-nikud-pre-train-verification/: 001_verify_cuda.py  002_verify_tokenizer.py  003_verify_encoding.py  004_verify_dataset_collation.py  005_verify_model_forward.py  006_verify_training_1min.py  007_verify_overfit.py  008_full_pipeline_report.md  008_full_pipeline_report.py
whisper-nikud/: .gitignore  README.md  pyproject.toml
whisper-nikud/src/: config.py  (+5 more)
(+13 files in other folders)
