[project]
name = "renikud-onnx"
version = "0.1.0"
description = "ONNX inference for Hebrew Nikud model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.23.2",
    "numpy>=2.2.1",
    "tokenizers>=0.21.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "onnx>=1.19.1",
    "onnxscript>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "safetensors>=0.7.0",
]
